feat: store keys in redis
